crates/churl/tests/snapshots/tui_snapshot__settings_panel_toggle_tls.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 1675
expression: snap
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│           ┏ Settings · Network ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓───────────┐
│           ┃    Proxy             (none — uses HTTP(S)_PROXY env) ┃           │
│           ┃▸ ● TLS verification  OFF — certificates NOT verified ┃           │
│           ┃    Cookies           off                             ┃           │
│           ┃┌ Cookies ───────────────────────────────────────────┐┃           │
│           ┃│(cookie jar is off — enable it above, or a to add on│┃           │
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃───────────┘
│           ┃│                                                    │┃───────────┐
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃           │
│           ┃└────────────────────────────────────────────────────┘┃           │
│           ┃                                                      ┃           │
│           ┃ Certificate verification for HTTPS requests. Turning ┃           │
└───────────┗gle · a add · l cookies · s save · esc menu · q close ┛           │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 ⚠ TLS verification OFF — certificates not checked                              
 EXPLORER · demo · ⚠ TLS OFF · ? help · space leader · / search · : palette
