crates/churl/tests/snapshots/tui_snapshot__tab_strip_dirty_tab_marker.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓ List users ●                                     
┃  ▸ orders                  ┃┌ URL ───────────────────────────────────────────┐
┃  ▾ users                   ┃│GET  https://api.test/usersZZZ              ●   │
┃>   List users ●            ┃└────────────────────────────────────────────────┘
┃    Create user             ┃┌ Request ───────────────────────────────────────┐
┃    Get user                ┃│ Params(0)   Headers(0)   Auth   Body           │
┃                            ┃│  (no params — a to add)                        │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│GET https://api.test/usersZZZ                   │
┃                            ┃│                                                │
┃                            ┃│press ctrl-s to send                            │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ● unsaved · w save · ? help · space leader · / search · : pal
