crates/churl/tests/snapshots/tui_snapshot__tab_strip_one_buffer.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 2153
expression: rendered
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓ List users                                       
┃  ▸ orders                  ┃┌ URL ───────────────────────────────────────────┐
┃  ▾ users                   ┃│GET  https://api.test/users                     │
┃>   List users              ┃└────────────────────────────────────────────────┘
┃    Create user             ┃┌ Request ───────────────────────────────────────┐
┃    Get user                ┃│ Params(0)   Headers(0)   Auth   Body           │
┃                            ┃│  (no params — a to add)                        │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│GET https://api.test/users                      │
┃                            ┃│                                                │
┃                            ┃│press ctrl-s to send                            │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
