crates/churl/tests/snapshots/tui_snapshot__tab_strip_overflow_edge_markers.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 2535
expression: rendered
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓‹  Endpoint nu…     Endpoint nu…                  
┃  ▾ api                     ┃┌ URL ───────────────────────────────────────────┐
┃    Endpoint number 0       ┃│GET  https://api.test/7                         │
┃    Endpoint number 1       ┃└────────────────────────────────────────────────┘
┃    Endpoint number 2       ┃┌ Request ───────────────────────────────────────┐
┃    Endpoint number 3       ┃│  Params(0)     Headers(0)     Auth     Body    │
┃    Endpoint number 4       ┃│  (no params — a to add)                        │
┃    Endpoint number 5       ┃│                                                │
┃    Endpoint number 6       ┃│                                                │
┃>   Endpoint number 7       ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│GET https://api.test/7                          │
┃                            ┃│                                                │
┃                            ┃│press ctrl-s to send                            │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
