crates/churl/tests/snapshots/tui_snapshot__tab_strip_two_buffers_active_second.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓ List users  Get user                             
┃  ▸ orders                  ┃┌ URL ───────────────────────────────────────────┐
┃  ▾ users                   ┃│GET  https://api.test/users/{{id}}        {{1}} │
┃    List users              ┃└────────────────────────────────────────────────┘
┃    Create user             ┃┌ Request ───────────────────────────────────────┐
┃>   Get user                ┃│ Params(0)   Headers(0)   Auth   Body           │
┃                            ┃│  (no params — a to add)                        │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│GET https://api.test/users/{{id}}               │
┃                            ┃│                                                │
┃                            ┃│press ctrl-s to send                            │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
