crates/churl/tests/snapshots/tui_snapshot__url_bar_dirty_dot.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 428
expression: rendered
---
┌ Explorer ──────────────────┐┏ URL ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│  ▸ orders                  │┃GET  https://api.test/usersX                ●   ┃
│  ▾ users                   │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│>   List users              │┌ Request ───────────────────────────────────────┐
│    Create user             ││ Params(0)   Headers(0)   Auth   Body           │
│    Get user                ││  (no params — a to add)                        │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/usersX                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 URL · demo · ● · ? help · space leader · / search · : palette
