crates/churl/tests/snapshots/tui_snapshot__url_bar_editing_inline.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐▐ List users ▌                                    
│  ▸ orders                  │┏ URL ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│  ▾ users                   │┃GET  https://api.test/users/extra█              ┃
│>   List users              │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│    Create user             │┌ Request ───────────────────────────────────────┐
│    Get user                ││▐ Params(0) ▌ ▐ Headers(0) ▌ ▐ Auth ▌ ▐ Body ▌  │
│                            ││  (no params — a to add)                        │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/users                      │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
└────────────────────────────┘│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 URL · demo · ? help · space leader · / search · : palette
